WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
NEW
271709
REGRESSION(
275820@main
): [GTK] `editing/selection/caret-in-div-containing-empty-block.html` is a constant failure
https://bugs.webkit.org/show_bug.cgi?id=271709
Summary
REGRESSION(275820@main): [GTK] `editing/selection/caret-in-div-containing-emp...
Vitaly Dyackhov
Reported
2024-03-26 08:38:30 PDT
-
Attachments
Add attachment
proposed patch, testcase, etc.
Vitaly Dyackhov
Comment 1
2024-03-26 08:46:11 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26465
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug