REGRESSION(275820@main): [GTK] `editing/selection/caret-in-div-containing-empty-block.html` is a constant failure https://bugs.webkit.org/show_bug.cgi?id=271709

Reviewed by NOBODY (OOPS!).

Since `computeCaretRectForEmptyElement()`/`computeCaretRectForBox()` are
not using integral font API anymore, we need to do the same in
`primaryFontMetricsForInlineBox()` which is used by
`computeCaretRectForText()`.

* Source/WebCore/layout/formattingContexts/inline/InlineLineBoxBuilder.cpp:
(WebCore::Layout::primaryFontMetricsForInlineBox):